--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,24 +17,105 @@
 	<% end %>
 	
 
-	<%= stylesheet_link_tag    "application", :media => "all" %>
-	<%= stylesheet_link_tag    "bootstrap", :media => "all" %>
-	<%= stylesheet_link_tag    "bootstrap-responsive", :media => "all" %>
-	<%= stylesheet_link_tag    "style", :media => "all" %>
-	<%= stylesheet_link_tag    "buttons", :media => "all" %>
-	<%= stylesheet_link_tag    "prettify", :media => "all" %>
-	<%= stylesheet_link_tag    "custom", :media => "all" %>
-	<%= stylesheet_link_tag    "datepicker", :media => "all" %>
-	<%= stylesheet_link_tag    "bootstrap-timepicker", :media => "all" %>
-	<%= stylesheet_link_tag    "select2", :media => "all" %>
-	<%= stylesheet_link_tag    "font-awesome", :media => "all" %>
-	<%= stylesheet_link_tag    "font-awesome-ie7", :media => "all" %>
+	
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="LetsDine">
+    <link rel="shortcut icon" href="../../assets/ico/favicon.png">    
 
-	<%= javascript_include_tag "application" %>
-	<%= javascript_include_tag "jquery-1.9.1" %>
-	<%= javascript_include_tag "bootstrap" %>
-	<%= javascript_include_tag "closed-event-overlay" %>
-	<%= javascript_include_tag "select2" %>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- Font awesome core CSS -->
+    <link href="css/font-awesome.css" rel="stylesheet">    
+    <link href="css/font-awesome-ie7.css" rel="stylesheet">    
+    
+    
+
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/buttons.css" rel="stylesheet">
+    <!-- Lato font -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+
+    
+    <!-- Typekit Fonts -->
+    <script type="text/javascript" src="//use.typekit.net/yjy6rjo.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="js/lib/html5shiv.js"></script>
+      <script src="js/lib/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script>
+      var map;
+      var marker;
+      var myLatlng = new google.maps.LatLng(17.432259,78.407529);
+
+      function initialize() {
+        var mapOptions = {
+          zoom: 14,
+          center: myLatlng,
+          mapTypeId: google.maps.MapTypeId.ROADMAP,
+          styles: [
+          {
+             featureType: 'all',
+             elementType: 'all',
+             stylers: [
+               { visibility: "on" },
+               // Increase to -100 to remove all color
+               { saturation: -80 }
+            ]
+          }]
+        };
+
+        map = new google.maps.Map(document.getElementById('map_canvas'),
+            mapOptions);
+
+        var contentString = '<div id="content">'+
+            '<div id="siteNotice">'+
+            '</div>'+
+            '<h2 id="firstHeading" class="firstHeading">Via Milano </h2>'+
+            '<div id="bodyContent">'+
+            '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
+            'sandstone rock formation in the southern part of the '+
+            'Northern Territory, central Australia. It lies 335 km (208 mi) '+
+            'south west of the nearest large town, Alice Springs; 450 km '+
+            '(280 mi) by road. Kata Tjuta and Uluru are the two major '+
+            'features of the Uluru - Kata Tjuta National Park. Uluru is '+
+            'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
+            'Aboriginal people of the area. It has many springs, waterholes, '+
+            'rock caves and ancient paintings. Uluru is listed as a World '+
+            'Heritage Site.</p>'+
+            '<p>Attribution: Uluru, <a href="http://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
+            'http://en.wikipedia.org/w/index.php?title=Uluru</a> (last visited June 22, 2009).</p>'+
+            '</div>'+
+            '</div>';
+
+        var infowindow = new google.maps.InfoWindow({
+            content: contentString
+        });
+
+        marker = new google.maps.Marker({
+            position: myLatlng,
+            map: map,
+            title: 'Hello World!'
+        });
+
+        google.maps.event.addListener(marker, 'click', function() {
+          infowindow.open(map,marker);
+        });
+      }
+
+      google.maps.event.addDomListener(window, 'load', initialize);
+
+
+    </script>
 	<%= yield :javascript %>	
 	
 	<%= csrf_meta_tags %>
@@ -64,29 +145,32 @@
 	<!-- FB end -->
 
 	<div class="topBar">
-		<div class="container">
-			<div class="row-fluid">
-				<div class="span4 offset8">
-					<div class="topBarLogin pull-right">
-						<span>Already have an account?</span>
-						<a href="<%= new_user_session_path %>" class="css3-button css3-button_pink">Login</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+      <div class="container">
+        <div class="row">
+          
+          <div class="col-md-2 logo">
+            <%= image_tag("logo.png")%>
+          </div>
 
-	<div class="container">
-    <div class="row">
-        <div class="span6 offset3">
-            <div class="headerLogo">
-                <%= image_tag "logo.png" %>
-               <%= yield :homepageHeader %>
-            </div>
+          <div class="col-md-6">
+            <ul class="topNav pull-right">
+              <li class="selected">Home</li>
+              <li>How it works</li>
+              <li>About Us</li>
+              <li>Contact Us</li>
+            </ul>
+          </div>
+
+          <div class="col-md-4">
+            <a href="<%= new_user_session_path %>" class="loginButton css3-button css3-button_pink pull-right">Login/Signup</a>
+          </div>
+
         </div>
-    </div>
-</div>
 
+        <%= yield :homepageHeader %>
+
+      </div>
+    </div>
 
 
     <% if @home_page %>
@@ -197,6 +281,15 @@
 			</div>
 		</div>
 	</div>
-
+	<div class="footer">
+		<div class="container">
+			<div class="row-">
+				<div class="col-md-12">
+		            All rights reserved Gyeser
+		          </div>
+			</div>
+		</div>
+	</div>
+	
 </body>
 </html>
