--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :javascript do %>
+    <%= stylesheet_link_tag    "nanoscroller.css", :media => "all" %>
     <%= javascript_include_tag "closed-event-overlay" %>
-    <%= javascript_include_tag "cycle" %>
+    <%= javascript_include_tag "jquery.nanoscroller.min" %>    
 <% end %>
 
 <% content_for :homepageHeader do %>
@@ -30,9 +31,9 @@
     
 
 <% end %>
-
+<!--
 <div id="map_canvas" style="width: 100%; height: 300px;background: #ccc; border-bottom:4px solid #333;"></div>
-
+-->
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -47,7 +48,36 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                City Select
+                <div id="citySelect">
+                  Select your city
+                  <i class="icon-angle-down pull-right"></i>
+                </div>
+                
+                <div id="cityList" class="hidden_div nano">
+                  <div class="content"> 
+                    <ul>
+                      <li>
+                        <strong>India</strong>
+                        <ul>
+                          <li>Ahmedabad</li>
+                          <li>Bangalore</li>
+                          <li>Hyderabad</li>
+                          <li>Pune</li>
+                        </ul>
+                      </li>
+                      <li>
+                        <strong>Malaysia</strong>
+                        <ul>
+                          <li>Kuala Lumpur</li>
+                          <li>Penang</li>
+                          <li>Perak</li>
+                          <li>Selangor</li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                  
+                </div>
             </div>
         </div>
     </div>
@@ -78,64 +108,24 @@
 
 <%= render partial: 'events/event_list', :collection => @events, :as => :events %>
 
-
-
-
-<div id="communication" class="modal hide fade">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>No events in your city</h3>
-  </div>
-  <div class="modal-body">
-
-    <p>There are no events in your city right now. Leave your email address and we will get back to you once we start conducting events in your city</p>
-    
-    <%= form_for(@new_city_notification, :remote => true) do |f| %>
-        <% if  request.location.nil? %>
-            
-        <% else %>
-            <div class="field">
-                <%= f.hidden_field :city, :value => request.location.city %>
-            </div>    
-        <% end %>
-        <div class="field">
-            <%= f.label :email %>
-            <%= f.text_field :email, :placeholder => "Enter your email address" %>
-        </div>    
-
-  </div>
-  <div class="modal-footer">
-    <%= f.submit "Keep me informed", :class => "large awesome green", :id => "keep_me_informed"  %>
-  </div>
-  <% end %>
-</div>
-
-<!-- Slider script -->
 <script>
-$(document).ready(function(){
-    //$('#firstSlider').delay(1000).fadeOut();
-    $('#slider').cycle();
-})
+  $(".nano").nanoScroller();
 </script>
 
-
-<% if @no_events_in_city == true %>
-    <script>
-    $(document).ready(function(){
-      $('#communication').modal('show');
-      $('#keep_me_informed').click(function(event) {
-        var valuesToSubmit = $('#new_new_city_notification').serialize();
-        $.ajax({
-          url: $('#new_new_city_notification').attr('action'),
-          data: valuesToSubmit,
-          type: "POST",
-          dataType: "JSON"
-        }).success(function(json){
-            $('#communication').modal('hide');
-        });
-        return false;
+<script>
+  $(document).ready(function(){
+    $(document).mouseup(function (e)
+    {
+        var container = $("#cityList");
+        if (container.has(e.target).length === 0)
+        {
+        container.addClass('hidden_div');
+        }
       });
+    
+    $('#citySelect').click(function(){
+      $('#cityList').removeClass('hidden_div');
+      
     });
-  </script>  
-<% end %>
-            
+  });
+</script>
