--- a/app/assets/stylesheets/nanoscroller.css
+++ b/app/assets/stylesheets/nanoscroller.css
@@ -1,8 +1,10 @@
 /** initial setup **/
 .nano {
   position : relative;
+  /*
   width    : 100%;
   height   : 100%;
+  */
   overflow : hidden;
 }
 .nano .content {
