--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -136,7 +136,7 @@ body
 	#cityList 
 	{
 
-		z-index: 100;
+		z-index: 1000;
 		position:absolute;
 		left:15px;
 		top:42px;
@@ -164,7 +164,8 @@ body
 			}
 			ul li
 			{
-				padding: 10px 20px;
+				padding: 10px 30px 10px 20px;
+				margin-right: 10px;
 				&:hover
 				{
 					background: #ececec;
@@ -203,9 +204,16 @@ body
 /* Scroll Bar Styles */
 /*******************************************************************/
 .nano { 
-	background: #bba; 
-	width: 1000px; 
-	height:500px; 
+	
+	width: 200px; 
+	height:300px; 
+}
+.content
+{
+	position:absolute;
+	z-index: 100;
+	left: 0;
+	top: 0;
 }
 .nano .pane   { background: #888; }
 .nano .slider { background: #111; }
