--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,8 +52,9 @@
                   Select your city
                   <i class="icon-angle-down pull-right"></i>
                 </div>
-                
-                <div id="cityList" class="hidden_div nano">
+
+                <div id="cityList" class="hidden_div">
+                  <div class="nano">
                   <div class="content"> 
                     <ul>
                       <li>
@@ -77,7 +78,9 @@
                     </ul>
                   </div>
                   
+                  </div>
                 </div>
+                
             </div>
         </div>
     </div>
@@ -119,13 +122,18 @@
         var container = $("#cityList");
         if (container.has(e.target).length === 0)
         {
-        container.addClass('hidden_div');
+          container.addClass('hidden_div');
         }
       });
     
     $('#citySelect').click(function(){
       $('#cityList').removeClass('hidden_div');
-      
+      $('#cityList .content ul ul li').click(function(e){
+        var citySelected = $(this).text();
+        var url = window.location.pathname
+        var url_to_submit_to = '/'+citySelected;
+        window.location = url_to_submit_to;
+      });
     });
   });
 </script>
