--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -383,6 +383,37 @@ body
 		width: 100%;
 		padding-bottom: 20px;
 	}
+	.loginPageFacebookButton
+	{
+		display: block;
+		width: 100%;
+		padding-bottom: 25px;	
+		img
+		{
+			margin-left: 5px;
+			padding-bottom: 5px;
+		}
+	}
+	.facebookLoginDivider
+	{
+		margin: 20px 0 10px 0;
+		border-top: 1px solid #ccc;
+		.or
+		{
+			margin-top: -10px;
+			position: relative;
+			left: 49%;
+		}
+	}
+	.loginFooter
+	{
+		margin-top: 20px;
+		.linksDivider
+		{
+			display: inline;
+
+		}
+	}
 }
 /*******************************************************************/
 /* Footer Styles */
