Fixed the top login button issue where the padding-bottom was too small. But the fix is a style in the html page. This needs to fixed later

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -166,7 +166,7 @@
           </div>
 
           <div class="col-md-4">
-            <a href="<%= new_user_session_path %>" class="loginButton css3-button css3-button_pink pull-right">Login/Signup</a>
+            <a href="<%= new_user_session_path %>" class="css3-button css3-button_pink loginButton pull-right" style="padding-bottom:25px">Login/Signup</a>
           </div>
 
         </div>
