--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -59,7 +59,8 @@ body {
     color: #dd4124; }
 
 .loginButton {
-  margin: 10px; }
+  margin-top: 10px;
+  padding: 10px 10px 20px 10px; }
 
 /*******************************************************************/
 /* Common Styles */
